# opt300x-rs

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: build.yml
examples/: linux.rs
src/: device_impl.rs  lib.rs  slave_addr.rs
tests/: integration.rs  one_shot.rs
tests/common/: mod.rs
