[package]
name = "opt300x"
version = "1.0.0"
authors = ["Diego Barrios Romero <eldruin@gmail.com>"]
repository = "https://github.com/eldruin/opt300x-rs"
license = "MIT OR Apache-2.0"
description = "Platform-agnostic Rust driver for the OPT300x ambient light sensors. Compatible with OPT3001, OPT3002, OPT3004, OPT3006 and OPT3007"
readme = "README.md"
keywords = ["ambient", "light", "sensor", "als", "embedded-hal-driver"]
categories = ["embedded", "hardware-support", "no-std"]
homepage = "https://github.com/eldruin/opt300x-rs"
documentation = "https://docs.rs/opt300x"
include = [
    "/**/*.rs",
    "/Cargo.toml",
    "/README.md",
    "/CHANGELOG.md",
    "/LICENSE-MIT",
    "/LICENSE-APACHE",
]
edition = "2018"

[dependencies]
embedded-hal = "1.0.0"
nb = "1"

[dev-dependencies]
linux-embedded-hal = "0.4.0"
embedded-hal-mock = {version="0.10.0", default-features=false, features=["eh1"]}

[profile.release]
lto = true
